# nwg-launchers

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  README.md.in  make_readme.py  make_readme.sh  meson.build  meson_options.txt  nwgconfig.h.in  version.h
.github/workflows/: freebsd.yml  ubuntu.yml
bar/: Makefile  bar.cc  bar.h  bar.json  bar.sh  bar_classes.cc  bar_tools.cc  bar_tools.cpp  gtk-classes.cc  help.h.in  meson.build  style.css  tools.cpp
common/: charconv-compat.h  filesystem-compat.h  log.h  meson.build  nwg_classes.cc  nwg_classes.h  nwg_exceptions.cc  nwg_exceptions.h  nwg_tools.cc  nwg_tools.h  on_event.cc  on_event.h  time_report.h
dmenu/: Makefile  dmenu.cc  dmenu.h  dmenu.sh  dmenu_classes.cc  dmenu_run.sh  dmenu_tools.cc  dmenu_tools.cpp  help.h.in  meson.build  style.css
examples/nwgbar/: exit-fvwm.json  exit-i3.json  exit-ob.json
grid/: Makefile  grid.cc  grid.conf  grid.h  grid.sh  grid_classes.cc  grid_client.cc  grid_entries.cc  grid_entries.h  grid_tools.cc  grid_tools.cpp  gtk-classes.cc  help.h.in  meson.build  on_desktop_entry.h  style.css  tools.cpp
subprojects/: gtk-layer-shell-0.wrap  nlohmann_json.wrap
